Discord 메시지에서 URL 임베드(미리보기) 생성 방지를 위해 URL을 꺾쇠 괄호로 감싸도록 수정

--- a/.github/workflows/discord-pr-notification.yml
+++ b/.github/workflows/discord-pr-notification.yml
@@ -16,29 +16,35 @@ jobs:
         run: |
           EVENT_NAME="${{ github.event_name }}"
           MESSAGE=""
-          
+
           if [ "$EVENT_NAME" = "pull_request" ]; then
             ACTION="${{ github.event.action }}"
             TITLE="${{ github.event.pull_request.title }}"
+            URL="<${{ github.event.pull_request.html_url }}>"
             if [ "$ACTION" = "opened" ]; then
-              MESSAGE=":sparkles: 새로운 Pull Request가 생성되었습니다!\n제목: **$TITLE**\nURL: ${{ github.event.pull_request.html_url }}"
+              MESSAGE=":sparkles: 새로운 Pull Request가 생성되었습니다!\n제목: **$TITLE**\nURL: $URL"
             elif [ "$ACTION" = "reopened" ]; then
-              MESSAGE=":repeat: Pull Request가 다시 열렸습니다!\n제목: **$TITLE**\nURL: ${{ github.event.pull_request.html_url }}"
+              MESSAGE=":repeat: Pull Request가 다시 열렸습니다!\n제목: **$TITLE**\nURL: $URL"
             elif [ "$ACTION" = "closed" ]; then
               if [ "${{ github.event.pull_request.merged }}" = "true" ]; then
-                MESSAGE=":white_check_mark: Pull Request가 머지되었습니다!\n제목: **$TITLE**\nURL: ${{ github.event.pull_request.html_url }}"
+                MESSAGE=":white_check_mark: Pull Request가 머지되었습니다!\n제목: **$TITLE**\nURL: $URL"
               else
-                MESSAGE=":x: Pull Request가 닫혔습니다.\n제목: **$TITLE**\nURL: ${{ github.event.pull_request.html_url }}"
+                MESSAGE=":x: Pull Request가 닫혔습니다.\n제목: **$TITLE**\nURL: $URL"
               fi
             fi
           elif [ "$EVENT_NAME" = "pull_request_review" ]; then
             REVIEWER="${{ github.event.review.user.login }}"
-            COMMENT="${{ github.event.review.body }}"
-            PR_TITLE="${{ github.event.pull_request.title }}"
-            PR_URL="${{ github.event.pull_request.html_url }}"
-            MESSAGE=":speech_balloon: **$REVIEWER**님이 리뷰 코멘트를 남겼습니다!\nPull Request: **$PR_TITLE**\n코멘트: $COMMENT\nURL: $PR_URL"
+            REVIEW_STATE="${{ github.event.review.state }}"
+            TITLE="${{ github.event.pull_request.title }}"
+            URL="<${{ github.event.pull_request.html_url }}>"
+            if [ "$REVIEW_STATE" = "approved" ]; then
+              MESSAGE=":white_check_mark: **$REVIEWER**님이 Pull Request를 승인했습니다!\nPull Request: **$TITLE**\nURL: $URL"
+            else
+              COMMENT="${{ github.event.review.body }}"
+              MESSAGE=":speech_balloon: **$REVIEWER**님이 리뷰 코멘트를 남겼습니다!\nPull Request: **$TITLE**\n코멘트: $COMMENT\nURL: $URL"
+            fi
           fi
-          
+
           echo "::set-output name=discord_message::$MESSAGE"
           
       - name: Send notification to Discord
