--- a/.github/workflows/discord-pr-notification.yml
+++ b/.github/workflows/discord-pr-notification.yml
@@ -1,10 +1,13 @@
-name: Discord PR Notifications
+name: Discord Notifications
 
 on:
   pull_request:
     types: [opened, closed, reopened]
   pull_request_review:
     types: [submitted]
+  push:
+    branches:
+      - main
 
 jobs:
   notify_discord:
@@ -43,6 +46,12 @@ jobs:
               COMMENT="${{ github.event.review.body }}"
               MESSAGE=":speech_balloon: **$REVIEWER**님이 리뷰 코멘트를 남겼습니다!\nPull Request: **$TITLE**\n코멘트: $COMMENT\nURL: $URL"
             fi
+          elif [ "$EVENT_NAME" = "push" ]; then
+            # For a push event, check if commit info is available
+            AUTHOR="${{ github.event.head_commit.author.name }}"
+            COMMIT_MESSAGE="${{ github.event.head_commit.message }}"
+            COMMIT_URL="<${{ github.event.head_commit.url }}>"
+            MESSAGE=":rocket: main 브랜치에 직접 푸시가 발생했습니다!\n커밋 작성자: **$AUTHOR**\n커밋 메시지: **$COMMIT_MESSAGE**\n커밋 URL: $COMMIT_URL"
           fi
 
           echo "::set-output name=discord_message::$MESSAGE"
