--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -4,3 +4,8 @@
 #spring.datasource.password=etf
 #spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.jpa.hibernate.ddl-auto=create
+
+
+#spring.cache.type=redis
+#spring.redis.host=localhost
+#spring.redis.port=6379
