--- a/build.gradle
+++ b/build.gradle
@@ -45,8 +45,16 @@ dependencies {
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 
+	implementation 'org.json:json:20230227'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
+
 	//websocket
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	// 이미 있는 spring-boot-starter-websocket 은 서버용이므로, JSR-356 클라이언트를 위해선 아래 두 개가 필요
+	implementation 'jakarta.websocket:jakarta.websocket-api:2.1.0'
+	implementation 'org.glassfish.tyrus.bundles:tyrus-standalone-client:1.18'
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 }
 
 tasks.named('test') {
