--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [ main ]
 
+env:
+  AWS_ACCESS_KEY_ID: ${secrets.AWS_ACCESS_KEY_ID}
+  AWS_SECRET_ACCESS_KEY: ${secrets.AWS_SECRET_ACCESS_KEY}
+  JWT_SECRET: ${secrets.JWT_SECRET}
+
 jobs:
   test:
     name: Run Tests
