--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -7,9 +7,9 @@ on:
     branches: [ main ]
 
 env:
-  AWS_ACCESS_KEY_ID: ${secrets.AWS_ACCESS_KEY_ID}
-  AWS_SECRET_ACCESS_KEY: ${secrets.AWS_SECRET_ACCESS_KEY}
-  JWT_SECRET: ${secrets.JWT_SECRET}
+  AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
+  AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+  JWT_SECRET: ${{secrets.JWT_SECRET}}
 
 jobs:
   test:
