--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,6 +15,7 @@ jobs:
   test:
     name: Run Tests
     runs-on: ubuntu-latest
+    environment: dev
 
     steps:
       - name: Checkout code
@@ -46,6 +47,7 @@ jobs:
     name: Build Application
     needs: test  # test job 완료 후 실행
     runs-on: ubuntu-latest
+    environment: dev
 
     steps:
       - name: Checkout code
