--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,17 +25,8 @@ cloud.aws.region.static=ap-northeast-2
 cloud.aws.stack.auto=false
 cloud.aws.s3.domain=https://d2wp8jsocy1di9.cloudfront.net
 
-cloud.aws.stack.auto-=false
-
-
-# ?? ?? ??
-server.port=0
-
-# ?????? OpenAPI ??
+# Korea Investment OpenAPI
 kis.domain=https://openapivts.koreainvestment.com:29443
 kis.appkey=${KIS_APPKEY}
 kis.secretkey=${KIS_SECRETKEY}
 kis.websocket-url=ws://ops.koreainvestment.com:31000
-
-#domain = ?? ???
-#websocket-url = ??? ??? url ??
