--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -10,6 +10,8 @@ env:
   AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
   AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
   JWT_SECRET: ${{secrets.JWT_SECRET}}
+  KIS_APPKEY: ${{secrets.KIS_APPKEY}}
+  KIS_SECRETKEY: ${{secrets.KIS_SECRETKEY}}
 
 jobs:
   test:
