--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,11 @@
 
 spring.application.name=Etf
 
-spring.datasource.url=jdbc:h2:mem:etf
+#spring.datasource.url=jdbc:postgresql://localhost:5432/etfDB
+#spring.datasource.username=etf
+#spring.datasource.password=etf
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comment=true
 spring.jpa.properties.hibernate.format_sql=true
