fix : etf 조회 제대로 되도록 고치는중

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,6 +1,6 @@
-#??? postgresql ??? ?? ??
-#spring.datasource.url=jdbc:postgresql://localhost:5432/etfDB
-#spring.datasource.username=etf
-#spring.datasource.password=etf
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.jpa.hibernate.ddl-auto=create
+??? postgresql ??? ?? ??
+spring.datasource.url=jdbc:postgresql://localhost:5432/etfDB
+spring.datasource.username=etf
+spring.datasource.password=etf
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=create
