--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,13 @@
 
 spring.application.name=Etf
 
-spring.datasource.url=jdbc:h2:mem:etf
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.use_sql_comment=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.highlight_sql=true
-logging.level.org.hibernate.orm.jdbc.bind=TRACE
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+#spring.datasource.url=jdbc:h2:mem:etf
+#spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.use_sql_comment=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.highlight_sql=true
+#logging.level.org.hibernate.orm.jdbc.bind=TRACE
+#spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 # 32 bytes string (base64 encoded)
 jwt.secret=${JWT_SECRET}
@@ -24,3 +24,9 @@ cloud.aws.s3.bucket=hoetfbucket1
 cloud.aws.region.static=ap-northeast-2
 cloud.aws.stack.auto=false
 cloud.aws.s3.domain=https://d2wp8jsocy1di9.cloudfront.net
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/etfDB
+spring.datasource.username=etf
+spring.datasource.password=etf
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=validate
