--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,6 @@ cloud.aws.s3.bucket=hoetfbucket1
 cloud.aws.region.static=ap-northeast-2
 cloud.aws.stack.auto=false
 cloud.aws.s3.domain=https://d2wp8jsocy1di9.cloudfront.net
+
+server.tomcat.max-http-header-size=65536
+
