--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,8 +16,9 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 # 32 bytes string (base64 encoded)
 jwt.secret=${JWT_SECRET}
-# 43200000 == 12 hours
-jwt.expiration-time=43200000
+jwt.refresh=${JWT_REFRESH_SECRET}
+jwt.expiration-time=900000
+jwt.refresh.expiration-time=1,209,600,000
 
 # report count limit
 report.limit=10
