fix : Password 해시화 BCrypt 방식으로 교체중

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 jwt.secret=${JWT_SECRET}
 jwt.refresh=${JWT_REFRESH_SECRET}
 jwt.expiration-time=900000
-jwt.refresh.expiration-time=1,209,600,000
+jwt.refresh.expiration-time=1209600000
 
 # report count limit
 report.limit=10
