--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,8 +31,15 @@ kis.appkey=${KIS_APPKEY}
 kis.secretkey=${KIS_SECRETKEY}
 kis.websocket-url=ws://ops.koreainvestment.com:31000
 
+# WebSocket Configuration
+websocket.endpoints.stocks=/ws/stocks
+websocket.allowed-origins=*
+#//http://localhost:3000/ ?? ?????? ??? ? ??? ?? ???
+
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/etfDB
 spring.datasource.username=etf
 spring.datasource.password=etf
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=validate
+
