빌드 오류 해결

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,18 +2,20 @@
 
 spring.application.name=Etf
 
-#spring.datasource.url=jdbc:h2:mem:etf
-#spring.jpa.properties.hibernate.show_sql=true
-#spring.jpa.properties.hibernate.use_sql_comment=true
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.properties.hibernate.highlight_sql=true
-#logging.level.org.hibernate.orm.jdbc.bind=TRACE
-#spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+spring.datasource.url=jdbc:h2:mem:etf
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comment=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.highlight_sql=true
+logging.level.org.hibernate.orm.jdbc.bind=TRACE
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 # 32 bytes string (base64 encoded)
 jwt.secret=${JWT_SECRET}
+jwt.refresh=${JWT_REFRESH_SECRET}
 # 43200000 == 12 hours
 jwt.expiration-time=43200000
+jwt.refresh.expiration-time=1209600000
 
 # report count limit
 report.limit=10
@@ -36,9 +38,14 @@ websocket.endpoints.stocks=/ws/stocks
 websocket.allowed-origins=*
 #//http://localhost:3000/ ?? ?????? ??? ? ??? ?? ???
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/etfDB
-spring.datasource.username=etf
-spring.datasource.password=etf
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=validate
+#spring.datasource.url=jdbc:postgresql://localhost:5432/etfDB
+#spring.datasource.username=etf
+#spring.datasource.password=etf
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.hibernate.ddl-auto=validate
 
+logging.level.org.hibernate=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
+logging.level.org.hibernate.loader=TRACE
+logging.level.org.springframework.transaction=DEBUG
