--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 # 32 bytes string (base64 encoded)
 jwt.secret=${JWT_SECRET}
-jwt.refresh=${JWT_REFRESH_SECRET}
+jwt.refresh.secret=${JWT_REFRESH_SECRET}
 jwt.expiration-time=900000
 jwt.refresh.expiration-time=1209600000
 
