--- a/build.gradle
+++ b/build.gradle
@@ -22,35 +22,43 @@ configurations {
     asciidoctorExt
 }
 
+// REST Docs snippets 위치
+ext {
+    snippetsDir = file('build/generated-snippets')
+}
+// configuration 단계에서 미리 생성해 줍니다
+snippetsDir.mkdirs()
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    compileOnly 'org.projectlombok:lombok'
+    compileOnly    'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    runtimeOnly 'com.h2database:h2'
+    runtimeOnly    'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    testRuntimeOnly    'org.junit.platform:junit-platform-launcher'
     testImplementation 'io.rest-assured:rest-assured:5.4.0'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
-    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
-    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+    runtimeOnly     'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly     'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
     annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
     annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
     annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
+
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
-    asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor'
-    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
-}
 
-ext {
-    snippetsDir = file('build/generated-snippets')
+    // Asciidoctor 연동
+    asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor'
 }
 
 tasks.named('test') {
@@ -58,80 +66,74 @@ tasks.named('test') {
     outputs.dir snippetsDir
 }
 
-asciidoctor {
-    configurations 'asciidoctorExt'
-    baseDirFollowsSourceFile()
-    inputs.dir snippetsDir
-    dependsOn test
-
-    attributes(
-            'doctype':      'book',
-            'toc':          'left',
-            'encoding':     'UTF-8'
-    )
-}
-
-asciidoctor.doFirst {
-    delete file('src/main/resources/static/docs')
-}
-
-task copyDocument(type: Copy) {
-    dependsOn asciidoctor
-    from file("build/docs/asciidoc")
-    into file("src/main/resources/static/docs")
-}
-
-build {
-    dependsOn bootJar
-}
-
+// 1) index.adoc 자동 생성 (test 의존성 제거)
 tasks.register("generateApiIndex") {
     group = "documentation"
-    description = "static/docs/*.html 파일로 index.adoc 자동 생성"
+    description = "src/docs/asciidoc 폴더의 .adoc 목록으로 index.adoc 생성"
+
     doLast {
-        def docsDir = file("src/main/resources/static/docs")
-//        def outFile = file("src/docs/asciidoc/index.adoc")
-        def outFile = docsDir.toPath().resolve("index.adoc").toFile()
-        if (!docsDir.exists()) return
+        def srcDir = file("src/docs/asciidoc")
+        srcDir.mkdirs()
+        def outFile = new File(srcDir, "index.adoc")
 
-        def content = new StringBuilder()
-                .append("= API 문서 인덱스\n:doctype: book\n:toc: left\n\n== 문서 목록\n\n")
+        def sb = new StringBuilder()
+                .append("= API 문서 인덱스\n")
+                .append(":doctype: book\n")
+                .append(":toc: left\n")
+                .append(":toclevels: 2\n\n")
+                .append("== 문서 목록\n\n")
 
-        docsDir.listFiles({ it.name.endsWith('.html') } as FileFilter)
-                .sort { it.name }
+        srcDir.listFiles({ it.name.endsWith('.adoc') && it.name != 'index.adoc' } as FileFilter)
+                .sort { a, b -> a.name <=> b.name }
                 .each { f ->
-                    def title = f.name.replaceFirst(/\\.html$/, '')
-                    content.append("* xref:${f.name}[${title} API 문서]\n")
+                    def name = f.name.replaceFirst(/\.adoc$/, '')
+                    sb.append("* xref:${name}.html[${name} API 문서]\n")
                 }
 
-        content.append("""
-        
+        sb.append("""
+
 == 사용 방법
 
 http://localhost:8080/docs/index.html
-위 링크를 클릭하면 INDEX 문서로 이동합니다.
 
 == 문서 위치
 
-`src/main/resources/static/docs/` 기준입니다.
+JAR 내부 classpath:/static/docs/ 에 포함됩니다.
 """.stripIndent())
 
-        outFile.parentFile.mkdirs()
-        outFile.text = content.toString()
-        outFile.parentFile.mkdirs()
-        outFile.withWriter('UTF-8') { writer ->
-            writer << content.toString()
-        }
-        println "▶ index.adoc 생성: ${docsDir.listFiles().size()}개 항목"
+        outFile.text = sb.toString()
+        println "▶ index.adoc 생성 완료: ${outFile.path}"
     }
-//    dependsOn copyDocument
-    dependsOn copyDocument, asciidoctor
 }
 
+// 2) Asciidoctor 설정: test + generateApiIndex → asciidoctor
+asciidoctor {
+    sourceDir = file("src/docs/asciidoc")
+    configurations 'asciidoctorExt'
+    baseDirFollowsSourceFile()
+    inputs.dir snippetsDir
+
+    attributes(
+            'doctype':   'book',
+            'toc':       'left',
+            'toclevels': '2',
+            'encoding':  'UTF-8'
+    )
+}
 tasks.named("asciidoctor") {
-    dependsOn test
+    dependsOn tasks.named("generateApiIndex")
+    dependsOn tasks.named("test")
 }
 
+// 3) bootJar 에 빌드된 docs 포함
 tasks.named("bootJar") {
-    dependsOn generateApiIndex
+    dependsOn tasks.named("asciidoctor")
+    from("$buildDir/docs/asciidoc") {
+        into 'static/docs'
+    }
+}
+
+// assemble 모든 것 포함
+build {
+    dependsOn tasks.named("bootJar")
 }
