--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 #spring.profiles.active=local
-
 spring.application.name=Etf
-
 spring.datasource.url=jdbc:h2:mem:etf
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comment=true
@@ -9,18 +7,20 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.highlight_sql=true
 logging.level.org.hibernate.orm.jdbc.bind=TRACE
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-
 # 32 bytes string (base64 encoded)
 jwt.secret=${JWT_SECRET}
 # 43200000 == 12 hours
 jwt.expiration-time=43200000
-
 # report count limit
 report.limit=10
-
 cloud.aws.credentials.accessKey=${AWS_ACCESS_KEY_ID}
 cloud.aws.credentials.secretKey=${AWS_SECRET_ACCESS_KEY}
 cloud.aws.s3.bucket=hoetfbucket1
 cloud.aws.region.static=ap-northeast-2
 cloud.aws.stack.auto=false
 cloud.aws.s3.domain=https://d2wp8jsocy1di9.cloudfront.net
+
+# "/docs/**" ??? ??? ?? ??(admin-api.html ?)? ?????/??????? ??
+spring.mvc.static-path-pattern=/docs/**
+# 1) ?? ?? ??  2) JAR ?? static/docs
+spring.web.resources.static-locations=file:build/docs/html5/docs/,classpath:/static/docs/
