--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/etfDB
 spring.datasource.username=etf
 spring.datasource.password=etf
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 #spring.datasource.url=jdbc:h2:mem:etf;DB_CLOSE_DELAY=-1
