CI 환경변수에 Test Properties 추가

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,6 +11,7 @@ env:
   AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
   JWT_SECRET: ${{secrets.JWT_SECRET}}
   JWT_REFRESH_SECRET: ${{secrets.JWT_REFRESH_SECRET}}
+  SPRING_PROFILES_ACTIVE: test
 
 jobs:
   test:
