--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -7,11 +7,11 @@ on:
     branches: [ main ]
 
 env:
-  AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
-  AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-  JWT_SECRET: ${{secrets.JWT_SECRET}}
-  JWT_REFRESH_SECRET: ${{secrets.JWT_REFRESH_SECRET}}
-  SSL_KEY_PASSWORD: ${{secrets.SSL_KEY_PASSWORD}}
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  JWT_SECRET: ${{ secrets.JWT_SECRET }}
+  JWT_REFRESH_SECRET: ${{ secrets.JWT_REFRESH_SECRET }}
+  SSL_KEY_PASSWORD: ${{ secrets.SSL_KEY_PASSWORD }}
 
 jobs:
   test:
@@ -41,17 +41,18 @@ jobs:
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
+
       - name: Restore keystore.p12 from base64
-        run: |
-            echo "$KEYSTORE_P12_B64" | base64 -d > ./src/main/resources/keystore.p12
+        run: echo -n "$KEYSTORE_P12_B64" | base64 -d > ./src/test/resources/keystore.p12
         env:
-            KEYSTORE_P12_B64: ${{ secrets.KEYSTORE_P12_B64 }}
+          KEYSTORE_P12_B64: ${{ secrets.KEYSTORE_P12_B64 }}
+
       - name: Run tests
         run: ./gradlew test --no-daemon
 
   build:
     name: Build Application
-    needs: test  # test job 완료 후 실행
+    needs: test
     runs-on: ubuntu-latest
     environment: dev
 
@@ -77,6 +78,11 @@ jobs:
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
+
+      - name: Restore keystore.p12 from base64
+        run: echo -n "$KEYSTORE_P12_B64" | base64 -d > ./src/main/resources/keystore.p12
+        env:
+          KEYSTORE_P12_B64: ${{ secrets.KEYSTORE_P12_B64 }}
 
       - name: Build application
         run: ./gradlew build --no-daemon
