feat : 웹소켓 연결 프론트 구현 및 수정중

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,8 +35,8 @@ kis.websocket-url=ws://ops.koreainvestment.com:31000
 
 # WebSocket Configuration
 websocket.endpoints.stocks=/ws/stocks
-websocket.allowed-origins=*
-#//http://localhost:3000/ ?? ?????? ??? ? ??? ?? ???
+websocket.allowed-origins=http://localhost:3000
+logging.level.org.springframework.web.socket=DEBUG
 
 #spring.datasource.url=jdbc:postgresql://localhost:5432/etfDB
 #spring.datasource.username=etf
