--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,12 @@ configurations {
 
 repositories {
 	mavenCentral()
-	maven {url 'https://repo.spring.io/snapshot'} //스냅샷 저장소 추가
+	maven { url 'https://repo.spring.io/milestone' }
+	maven { url 'https://repo.spring.io/snapshot' }
+	maven {
+		name = 'Central Portal Snapshots'
+		url = 'https://central.sonatype.com/repository/maven-snapshots/'
+	}
 }
 
 dependencies {
@@ -40,7 +45,6 @@ dependencies {
 	runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.11.5")
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.rest-assured:rest-assured:5.4.0'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
 	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
@@ -57,7 +61,13 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 
 	//spring AI
-	implementation 'org.springframework.ai:spring-ai-vertex-ai-gemini-spring-boot-starter:1.0.0-SNAPSHOT'
+	implementation platform("org.springframework.ai:spring-ai-bom:1.0.0-M7")
+	implementation 'org.springframework.ai:spring-ai-starter-model-vertex-ai-gemini'
+	// Replace the following with the starter dependencies of specific modules you wish to use
+	implementation 'org.springframework.ai:spring-ai-openai'
+
+	//google cloud
+	implementation 'com.google.cloud:spring-cloud-gcp-starter:6.2.0'
 }
 
 tasks.named('test') {
