--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,3 +41,13 @@ server.ssl.key-store=classpath:keystore.p12
 server.ssl.key-store-password=${SSL_KEY_PASSWORD}
 server.ssl.key-alias=sslsecret
 security.require-ssl=true
+
+# Vertex AI
+spring.ai.vertex.ai.gemini.project-id=prime-depot-460008-s4
+spring.ai.vertex.ai.gemini.location=us-central1
+spring.cloud.gcp.credentials.location=classpath:prime-depot-460008-s4-ee33e1c6ecb8.json
+logging.level.org.springframework.ai=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.com.google.api.client=DEBUG
+logging.level.com.google.api=DEBUG
+logging.level.com.google.cloud=DEBUG
