--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,3 +41,7 @@ server.ssl.key-store=classpath:keystore.p12
 server.ssl.key-store-password=${SSL_KEY_PASSWORD}
 server.ssl.key-alias=sslsecret
 security.require-ssl=true
+
+# Gemini API
+gemini.api.key=AIzaSyC-nH67wt16iQs_LQI_Aw37EvbC2o9XA00
+gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent
