--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -12,10 +12,10 @@ logging.level.org.hibernate.orm.jdbc.bind=TRACE
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 //ssl_??
-server.port=8443
-server.ssl.enabled=true
-server.ssl.key-store-type=PKCS12
-server.ssl.key-store=classpath:keystore.p12
-server.ssl.key-store-password=etf
-server.ssl.key-alias=sslsecret
-security.require-ssl=true
+#server.port=8443
+#server.ssl.enabled=true
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-store=classpath:keystore.p12
+#server.ssl.key-store-password=etf
+#server.ssl.key-alias=sslsecret
+#security.require-ssl=true
