--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,14 @@
 
 spring.application.name=Etf
 
-#spring.datasource.url=jdbc:postgresql://localhost:5432/etfDB
-#spring.datasource.username=etf
-#spring.datasource.password=etf
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:postgresql://localhost:5432/etfDB
+spring.datasource.username=etf
+spring.datasource.password=etf
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=create
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:mem:etf;DB_CLOSE_DELAY=-1
+#spring.datasource.url=jdbc:h2:mem:etf;DB_CLOSE_DELAY=-1
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comment=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -32,15 +32,6 @@ cloud.aws.s3.bucket=hoetfbucket1
 cloud.aws.region.static=ap-northeast-2
 cloud.aws.stack.auto=false
 cloud.aws.s3.domain=https://d2wp8jsocy1di9.cloudfront.net
-
-# ssl_??
-server.port=8443
-server.ssl.enabled=true
-server.ssl.key-store-type=PKCS12
-server.ssl.key-store=classpath:keystore.p12
-server.ssl.key-store-password=${SSL_KEY_PASSWORD}
-server.ssl.key-alias=sslsecret
-security.require-ssl=true
 
 # Vertex AI
 spring.ai.vertex.ai.gemini.project-id=prime-depot-460008-s4
