--- a/front/etf-recommendation/package.json
+++ b/front/etf-recommendation/package.json
@@ -49,6 +49,7 @@
     "next": "15.2.4",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
+    "prettier": "^3.5.3",
     "react": "18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "18.3.1",
