--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,3 +55,8 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=TRACE
 logging.level.org.hibernate.loader=TRACE
 logging.level.org.springframework.transaction=DEBUG
+
+//redis ? ??
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.cache.type=redis
