CI에 테스트 프로파일 명시적으로 지정

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -52,7 +52,7 @@ jobs:
         run: gcloud auth activate-service-account --key-file=$HOME/gcp-key.json
 
       - name: Run tests
-        run: ./gradlew test --no-daemon
+        run: ./gradlew test --no-daemon -Dspring.profiles.active=test
 
   build:
     name: Build Application
