--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,14 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/etfDB
 spring.datasource.username=etf
 spring.datasource.password=etf
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.use_sql_comment=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.highlight_sql=true
+spring.jpa.hibernate.ddl-auto=update
+#spring.h2.console.enabled=true
+##spring.h2.console.path=/h2-console
+#spring.datasource.url=jdbc:h2:mem:etf
+#spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.use_sql_comment=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.highlight_sql=true
 logging.level.org.hibernate.orm.jdbc.bind=TRACE
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
