--- a/front/etf-recommendation/package.json
+++ b/front/etf-recommendation/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@stomp/stompjs": "^7.1.1",
     "chart.js": "^4.4.9",
     "chartjs-adapter-date-fns": "^3.0.0",
     "class-variance-authority": "^0.7.1",
@@ -56,6 +57,7 @@
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
+    "sockjs-client": "^1.6.1",
     "sonner": "^1.7.1",
     "supports-color": "^10.0.0",
     "tailwind-merge": "^2.5.5",
