feat: docker-compose에 Redis 서비스 추가로 데이터 처리 성능 개선

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -19,3 +19,13 @@ services:
       - "max_connections=100"
       - "-c"
       - "client_encoding=UTF8"
+
+  redis:
+    image: redis:7-alpine
+    container_name: etf-redis
+    restart: always
+    ports:
+      - "6379:6379"
+    command: redis-server --appendonly yes
+    volumes:
+      - ./db/redis/data:/data
