--- a/front/etf-recommendation/package.json
+++ b/front/etf-recommendation/package.json
@@ -56,6 +56,7 @@
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
+    "sockjs-client": "^1.6.1",
     "sonner": "^1.7.1",
     "supports-color": "^10.0.0",
     "tailwind-merge": "^2.5.5",
