--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/etfDB
 spring.datasource.username=etf
 spring.datasource.password=etf
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 #spring.h2.console.enabled=true
 ##spring.h2.console.path=/h2-console
 #spring.datasource.url=jdbc:h2:mem:etf
